src/test/deca/context/invalid/rvalue_assign_bool_to_int_in_class.deca
// Test the rule (3.28): can't assign to an object of type int 
// a value from an object of type float. 

class A  {
    boolean b = true;
    int x = b;
}
